[package]
name = "piechart"
version = "0.1.1"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2018"
description = "a library for drawing fancy pie charts in the terminal"
repository = "https://github.com/jakobhellermann/piechart"
keywords = ["charts", "cli", "pie"]
categories = ["command-line-interface", "visualization"]
license = "MIT"

[dependencies]
ansi_term = "0.12"
