[package]
name = "piechart"
version = "1.0.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2018"
description = "a library for drawing fancy pie charts in the terminal"
repository = "https://github.com/jakobhellermann/piechart"
keywords = ["charts", "cli", "pie"]
categories = ["command-line-interface", "visualization"]
readme = "README.md"
license = "MIT"

[features]
cli = ["clap"]

[dependencies]
ansi_term = "0.12"

clap = { version = "3.0.0-beta.2", default-features = false, features = ["std", "suggestions", "color"], optional = true }


[dev-dependencies]

[[bin]]
name = "piechart"
required-features = ["cli"]